--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
+    "vercel": "^28.16.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
