--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.3",
     "framer-motion": "^9.0.6",
     "json-server": "^0.17.1",
+    "netlify-cli": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -58,4 +59,6 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
-  }}
+  },
+  "homepage": "."
+}
